# nclip

./: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
__test__/: index.spec.js
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
src/: lib.rs  macos.rs
